added some nav and body components

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-  <head lang="en">
+<html lang="en">
+  <head>
       <title>HackYourFuture Canada</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,22 +12,60 @@
     </head>
 
   <body>
+      <!-- navigation -->
       <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> 
+
             <a href="#" class="navbar-brand">HackYourFuture Canada</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu"
             aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle Navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarMenu">
+
                 <ul class="navbar-nav">
                     <li>
                         <a href="#" class="nav-link">Home</a>
                     </li>
+                    <li>
+                        <a href="#" class="nav-link">About Us</a>
+                    </li>
+                    <li>
+                        <a href="#" class="nav-link">The Team</a>
+                    </li>
+                    <li>
+                        <a href="#" class="nav-link">Contact</a>
+                    </li>
+                    <li>
+                        <a href="#" class="nav-link">Support Us</a>
+                    </li>
                 </ul>
+
+                <form class="form-inline my-2 my-lg-0">
+                    <button class="btn menu-right-btn border" type="submit">
+                        Submit
+                    </button>
+                </form>
+
             </div>
+
         </nav>   
       </header>
+
+      <!-- content -->
+      <div class="container bg-light">
+          <div class="row">
+              <div class="col-6">
+                one column
+              </div>
+              <div class="col-6">
+                two column
+            </div>
+          </div>
+      </div>
+
+      <!-- footer-->
 
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
