added website structure

--- a/index.html
+++ b/index.html
@@ -13,47 +13,51 @@
 
   <body>
       <!-- navigation -->
-      <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> 
+      <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+          <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="images/time-black.png"></a>
+              <div class="navbar-header"></div>
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarResponsive">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Curriculum</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Become a Coach</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Support Us</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">The Team</a>
+                        </li>      
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Contact</a>
+                         </li>  
+                    </ul>
+                </div>
+              </div>
+          </div>
+      </nav>
 
-            <a href="#" class="navbar-brand">HackYourFuture Canada</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu"
-            aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle Navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+      <!-- Banner Image -->
 
-            <div class="collapse navbar-collapse" id="navbarMenu">
-
-                <ul class="navbar-nav">
-                    <li>
-                        <a href="#" class="nav-link">Home</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">About Us</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">The Team</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">Contact</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">Support Us</a>
-                    </li>
-                </ul>
-
-                <form class="form-inline my-2 my-lg-0">
-                    <button class="btn menu-right-btn border" type="submit">
-                        Submit
-                    </button>
-                </form>
-
+      <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
+            <div class="col-md-6 px-0">
+              <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
+              <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
+              <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
             </div>
-
-        </nav>   
-      </header>
+          </div>
 
       <!-- content -->
+      <br>
       <div class="container bg-light">
           <div class="row">
               <div class="col-6">
@@ -66,6 +70,15 @@
       </div>
 
       <!-- footer-->
+
+      <br>
+
+      <footer class="blog-footer bg-light">
+            <p>HackYourFuture Canada <a href="https://twitter.com/mdo">#MadeByPaad</a>.</p>
+            <p>
+              <a href="#">Back to top</a>
+            </p>
+      </footer>
 
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
