re-did everything with better structure and removed redundant divs

--- a/index.html
+++ b/index.html
@@ -3,86 +3,104 @@
   <head>
       <title>HackYourFuture Canada</title>
       <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
+      <link rel="stylesheet" href="bootstrap-4.2.1-dist/css/bootstrap.min.css">
+      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="css/">
  
     </head>
 
-  <body>
-      <!-- navigation -->
-      <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-          <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="images/time-black.png"></a>
-              <div class="navbar-header"></div>
+  <body data-spy="scroll" data-target="#navbarResponsive">
+    <!-- Home -->    
+        <div id="Home" class="">
+        <!-- navigation -->
+        <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+            <a  class="navbar-brand" href="#"><img src="img/time-black.png"></a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarResponsive">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse" id="navbarResponsive">
+                <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#Home">Home</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Curriculum</a>
+                            <a class="nav-link" href="#About">About</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Become a Coach</a>
+                            <a class="nav-link" href="#Involve">Get Involved</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Support Us</a>
+                            <a class="nav-link" href="#Partners">Our Partners</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">The Team</a>
+                            <a class="nav-link" href="#Support">Support Us</a>
                         </li>      
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Contact</a>
-                         </li>  
+                            <a class="nav-link" href="#Contact">Contact</a>
+                        </li>  
                     </ul>
                 </div>
-              </div>
-          </div>
-      </nav>
+        </nav>
+        <!--end of navigation-->
 
-      <!-- Banner Image -->
+        <!-- Landing Page-->
 
-      <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
-            <div class="col-md-6 px-0">
-              <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
-              <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
-              <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
+        <div class="col-md-6 px-0">
+            <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
+            <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
+            <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
             </div>
-          </div>
+        </div>
+        <!-- Landing Page -->
+    <!-- End of Home -->
+    <div id="About" class="offset">
 
-      <!-- content -->
+    </div>
+
+    <!-- About section-->
+    <div id="About" class="offset">
+
+    </div>
+    <!-- end of about-->
+
+    <!-- Get involved section-->
+    <div id="Getinvolved" class="offset">
+
+    </div>
+    <!-- end of get involved-->
+
+    <!-- Partners section-->
+    <div id="Partners" class="offset">
+
+    </div>
+    <!-- end of Partners-->
+
+    <!-- Support Us section-->
+    <div id="Support" class="offset">
+
+    </div>
+    <!-- end of Support Us -->
+
+    <!-- Contact section-->
+    <div id="Contact" class="offset">
+
+    </div>
+    <!-- end of Contact-->
+
+    <!-- Footer section-->
+    <div id="Footer" class="offset">
+
+    </div>
       <br>
-      <div class="container bg-light">
-          <div class="row">
-              <div class="col-6">
-                one column
-              </div>
-              <div class="col-6">
-                two column
-            </div>
-          </div>
-      </div>
+    <!-- end of footer-->
 
-      <!-- footer-->
-
-      <br>
-
-      <footer class="blog-footer bg-light">
-            <p>HackYourFuture Canada <a href="https://twitter.com/mdo">#MadeByPaad</a>.</p>
-            <p>
-              <a href="#">Back to top</a>
-            </p>
-      </footer>
-
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-
+      <!-- Script Source Files -->
+      <script src="js/jquery-3.3.1.min.js"></script>
+      <script src="bootstrap-4.2.1-dist/js/bootstrap.min.js"></script>
+      <script src="https://use.fontawesome.com/releases/v5.6.3/js/all.js"></script>
+      <!-- -->
   </body>
+
 </html>
