added revamped header and new banner photo and about section

--- a/index.html
+++ b/index.html
@@ -7,37 +7,37 @@
 
       <link rel="stylesheet" href="bootstrap-4.2.1-dist/css/bootstrap.min.css">
       <link rel="stylesheet" href="style.css">
-      <link rel="stylesheet" href="css/">
+      <link rel="stylesheet" href="css/fixed.css">
  
     </head>
 
   <body data-spy="scroll" data-target="#navbarResponsive">
     <!-- Home -->    
-        <div id="Home" class="">
+        <div id="Home">
         <!-- navigation -->
-        <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
-            <a  class="navbar-brand" href="#"><img src="img/time-black.png"></a>
+        <nav class="navbar navbar-expand-md navbar-dark bg-light fixed-top">
+            <a  class="navbar-brand" href="#"><img src="img/canatinyhyf.png"></a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarResponsive">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="#Home">Home</a>
                         </li>
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="#About">About</a>
                         </li>
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="#Involve">Get Involved</a>
                         </li>
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="#Partners">Our Partners</a>
                         </li>
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="#Support">Support Us</a>
                         </li>      
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="#Contact">Contact</a>
                         </li>  
                     </ul>
@@ -45,23 +45,35 @@
         </nav>
         <!--end of navigation-->
 
-        <!-- Landing Page-->
-
-        <div class="col-md-6 px-0">
-            <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
-            <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
-            <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
+        <!-- start landing page-->
+        <div class="landing">
+            <div class="home-wrap">
+                <div class="home-inner">
+                </div>
             </div>
         </div>
+        <div class="caption text-center">
+            <h1>Welcome to HackYourFuture Canada</h1>
+            <h3>A Refugee Coding School in Toronto</h3>
+            <a class="btn btn-outline-dark btn-lg" href="#Involve"> Get Started </a>
+        </div>
+
+        <!-- end landing page-->
+
+        <!-- Landing Page-->
+
         <!-- Landing Page -->
     <!-- End of Home -->
-    <div id="About" class="offset">
-
-    </div>
 
     <!-- About section-->
     <div id="About" class="offset">
-
+        <div class="col-12 narrow text-center">
+            <h1>What is Hack Your Future?</h1>
+            <div class="heading-underline"></div>
+            <p>HackYourFuture Canada is a coding academy adapted by Refugee Career Jumpstart project (RCJP) [hyperlink to RCJP website] that teaches refugees with no programming/coding background essential skills to start a career in the technical field. With the expansion of the IT bubble, these skills have now become more in demand. 
+            3-hour classes are held once a week during the evening. We also offer extra help, or tutoring sessions during the weekends. Upon completion of the program, Resume/Cover Letter/LinkedIn/Interview workshops are held to prepare the students for the job market. Once ready, we assist our students with finding employment with our network of employers. 
+            </p>
+        </div>
     </div>
     <!-- end of about-->
 
