changed color scheme and some headings

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body data-spy="scroll" data-target="#navbarResponsive">
     <!-- Home -->    
         <div id="Home">
-        <!-- navigation -->
+        <!-- start of navigation -->
         <nav class="navbar navbar-expand-md navbar-dark bg-light fixed-top">
             <a  class="navbar-brand" href="#"><img src="img/canatinyhyf.png"></a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarResponsive">
@@ -67,18 +67,41 @@
 
     <!-- About section-->
     <div id="About" class="offset">
+        <!-- start of 'introduction'-->
         <div class="col-12 narrow text-center">
+            <br>
             <h1>What is Hack Your Future?</h1>
             <div class="heading-underline"></div>
-            <p>HackYourFuture Canada is a coding academy adapted by Refugee Career Jumpstart project (RCJP) [hyperlink to RCJP website] that teaches refugees with no programming/coding background essential skills to start a career in the technical field. With the expansion of the IT bubble, these skills have now become more in demand. 
-            3-hour classes are held once a week during the evening. We also offer extra help, or tutoring sessions during the weekends. Upon completion of the program, Resume/Cover Letter/LinkedIn/Interview workshops are held to prepare the students for the job market. Once ready, we assist our students with finding employment with our network of employers. 
+            <p class="lead">HackYourFuture Canada is a coding academy adapted by Refugee Career Jumpstart project (RCJP) [hyperlink to RCJP website] that teaches refugees with no programming/coding background essential skills to start a career in the technical field. With the expansion of the IT bubble, these skills have now become more in demand. 
+            <br><br>3-hour classes are held once a week during the evening. We also offer extra help, or tutoring sessions during the weekends. Upon completion of the program, Resume/Cover Letter/LinkedIn/Interview workshops are held to prepare the students for the job market. Once ready, we assist our students with finding employment with our network of employers. 
             </p>
         </div>
     </div>
+        <!--end of 'introduction'-->
+
+        <!-- start of 'what we teach'-->
+        <div id="topics">
+            <div class="jumbotron">
+                <div class="narrow">
+
+                </div>
+            </div>
+        </div>
+        <!-- end of 'what we teach'-->
+
+        <!-- start of who can apply?-->
+        <!-- end of who can apply?-->
+
     <!-- end of about-->
 
     <!-- Get involved section-->
     <div id="Getinvolved" class="offset">
+        <!-- jumbotron start-->
+        <div class="jumbotron">
+            <div class="narrow">
+
+            </div>
+        </div>
 
     </div>
     <!-- end of get involved-->
