added partners and part of the footer and some logo alterations

--- a/index.html
+++ b/index.html
@@ -292,10 +292,65 @@
         </div><!-- End of Team Section -->
     </div><!-- end of get involved-->
 
-    <!-- Support Us section-->
+    <!-- Partners section-->
+    <div id="Partners" class="offset">
+        <!-- Start of Jumbotron-->
+        <div class="jumbotron">
+            <div class="narrow text-center">
+                    <h1>Our Partners</h1>
+                    <div class="heading-underline"></div><br><br>
+            </div>
+            <!-- Start of Company Row-->
+            <div class="row text-center">
+                <div style="border-color: black" class="col-md-4">
+                        <div class="card" style="width: 18rem;">
+                            <img src="/img/td-bank-1-logo.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h4 class="card-title">TD Bank</h4>
+                                <p class="card-text">
+                                        TD Bank, America's Most Convenient Bank®, has proudly provided 
+                                        unparalleled convenience and legendary WOW! customer service for more than 150 years.
+                                </p>
+                                <a href="#" class="btn btn-primary">Go to Website</a>
+                            </div>
+                        </div> 
+                </div>
+                <div style="border-color: black" class="col-md-4">
+                        <div class="card" style=" width: 18rem;">
+                            <img style="padding: 20px" src="/img/MMLogo.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h4 class="card-title">MommyMonitor</h4>
+                                <p class="card-text">
+                                        Mommy Monitor is a direct maternal health care company 
+                                        that facilitates customized maternal care services.<br><br><br>
+                                </p>
+                                <a href="#" class="btn btn-primary">Go to Website</a>
+                            </div>
+                        </div> 
+                </div>
+                <div style="border-color: black" class="col-md-4">
+                        <div class="card" style="width: 18rem;">
+                            <img style="padding-top: 20px" src="/img/RBClogo2.jpg" class="card-img-top" alt="...">
+                            <div class="card-body"><br><br>
+                                <h4 class="card-title">RBC Bank</h4>
+                                <p class="card-text">
+                                        RBC is committed to helping clients thrive and communities prosper, supporting
+                                         initiatives that make an impact on society, the environment and the economy.<br>
+                                </p>
+                                <a href="#" class="btn btn-primary">Go to Website</a>
+                            </div>
+                        </div> 
+                </div>
+            </div> <!-- End of Company Row-->
+        </div> <!-- End of Jumbotron-->
+
+    </div>
+    <!-- end of Partners-->
+
+    <!-- Support Us section (needs work)-->
     <div id="Support" class="offset">
         <div class="jumbotron text-center">
-            <h1>Support HackYourFuture Canada</h1>
+            <h3>Support HackYourFuture Canada</h3>
             <div class="heading-underline"></div>
 
             <p>HackYourFuture Canada is a not-for-profit group. Become a partner or send a donation to help support the program</p>
@@ -303,13 +358,13 @@
             <!-- Become a partner Section-->
             <div id="Partner">
             <h3> Become a Partner</h3>
-            <a class="btn btn-outline-dark btn-lg" href="#Student"> Apply </a>
+            <a style="margin:25px;" class="btn btn-outline-dark btn-lg" href="#Student"> Apply </a>
  
             </div> <!-- end of become a partner-->
 
             <div id="Support">
                 <h3> Become a Partner</h3>
-                <a class="btn btn-outline-dark btn-lg" href="#Student"> Apply </a>
+                <a style="margin:25px;" class="btn btn-outline-dark btn-lg" href="#Student"> Apply </a>
             </div>
         </div>
 
@@ -317,22 +372,27 @@
     <!-- end of Support Us -->
 
 
-    <!-- Partners section-->
-    <div id="Partners" class="offset">
-
-    </div>
-    <!-- end of Partners-->
-
     <!-- Contact section-->
     <div id="Contact" class="offset">
+        <div class="narrow text-center">
+            <h1>Contact Us</h1>
+            <div class="heading-underline"></div>
+        </div>
 
     </div>
     <!-- end of Contact-->
 
     <!-- Footer section-->
-    <div id="Footer" class="offset">
-
-    </div>
+    <footer>
+        <div class="row justify-content-center">
+            <div class="col-md-5 text-center">
+                <img src="img/HYFCanada.png">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, tempora perferendis dolor molestiae tenetur quasi? 
+                    Culpa quidem a alias consequatur odio magni? Ab cupiditate molestiae voluptate enim iste modi vitae.
+                </p>
+            </div>
+        </div>
+    </footer>>
       <br>
     <!-- end of footer-->
 
