changed color scheme and background photo, changed some fonts and buttons

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!--end of navigation-->
 
         <!-- start landing page-->
-        <div class="landing">
+        <div id="Home" class="landing">
             <div class="home-wrap">
                 <div class="home-inner">
                 </div>
@@ -69,8 +69,8 @@
         <div class="col-12 narrow text-center">
             <br>
             <h1>What is Hack Your Future?</h1>
-            <div class="heading-underline"></div>
-            <p class="lead">HackYourFuture Canada is a coding academy adapted by Refugee Career Jumpstart project (RCJP) [hyperlink to RCJP website] that teaches refugees with no programming/coding background essential skills to start a career in the technical field. With the expansion of the IT bubble, these skills have now become more in demand. 
+            <div class="heading-underline"></div><br>
+            <p>HackYourFuture Canada is a coding academy adapted by Refugee Career Jumpstart project (RCJP) [hyperlink to RCJP website] that teaches refugees with no programming/coding background essential skills to start a career in the technical field. With the expansion of the IT bubble, these skills have now become more in demand. 
             <br><br>3-hour classes are held once a week during the evening. We also offer extra help, or tutoring sessions during the weekends. Upon completion of the program, Resume/Cover Letter/LinkedIn/Interview workshops are held to prepare the students for the job market. Once ready, we assist our students with finding employment with our network of employers. 
             </p>
         </div>
@@ -164,7 +164,7 @@
                 <div class="col-12 narrow text-center">
                     <h3>Who Can Apply?</h3>
                     <div class="heading-underline"></div> <br>
-                    <p class="lead">
+                    <p>
                         Talented Canadian Refugees who want to start their career in web-development. 
                         You must be motivated and be willing it to put in a lot of effort and time to become great at coding. 
                         You will need to have an intermediate level in English with basic computer skills. 
@@ -186,7 +186,7 @@
     <!-- end of about-->
 
     <!-- Get involved section-->
-    <div id="Getinvolved" class="offset">
+    <div id="Involve" class="offset">
         <!-- Start of Refugee/Tutor Join Form-->
         <div id="RIJoin" class="text-center">
             <div class="jumbotron">
@@ -285,7 +285,7 @@
                             <small><a href="#">Linkedin.com/Harry</a></small>
                         </div>
                 </div>
-                </div><!--End of Team Row-->
+                </div><br><!--End of Team Row-->
 
         </div>
 
@@ -375,7 +375,6 @@
     <!-- Contact section-->
     <div id="Contact" class="offset">
         <div class="narrow text-center">
-            <h1>Contact Us</h1>
             <div class="heading-underline"></div>
         </div>
 
@@ -384,11 +383,13 @@
 
     <!-- Footer section-->
     <footer>
-        <div class="row justify-content-center">
+        <div id="Contact" class="row justify-content-center">
             <div class="col-md-5 text-center">
                 <img src="img/HYFCanada.png">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, tempora perferendis dolor molestiae tenetur quasi? 
-                    Culpa quidem a alias consequatur odio magni? Ab cupiditate molestiae voluptate enim iste modi vitae.
+                <p>HackYourFuture Canada<br><br>
+                    <strong>Contact info</strong>
+                    <p>(555) 555 - 5555 <br> hyfcanada@live.ca</p>
+                
                 </p>
             </div>
         </div>
