--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     <!-- Partners section-->
     <div id="Partners" class="offset">
         <!-- Start of Jumbotron-->
-        <div class="jumbotron">
+        <div class="jumbotron text-center">
             <div class="narrow text-center">
                     <h1>Our Partners</h1>
                     <div class="heading-underline"></div><br><br>
@@ -304,7 +304,7 @@
                                         TD Bank, America's Most Convenient Bank®, has provided 
                                         unparalleled convenience and legendary customer service for more than 150 years.
                                 </p>
-                                <a href="#" class="btn btn-primary">Go to Website</a>
+                                <a target="_blank" href="https://www.td.com/ca/en/personal-banking/" class="btn btn-outline-dark btn-md">Go to Website</a>
                             </div>
                         </div> 
                 </div>
@@ -317,7 +317,7 @@
                                         Mommy Monitor is a direct maternal health care company 
                                         that facilitates customized maternal care services.<br><br>
                                 </p>
-                                <a href="#" class="btn btn-primary">Go to Website</a>
+                                <a target="_blank" href="http://www.mommymonitor.ca/" class="btn btn-outline-dark btn-md">Go to Website</a>
                             </div>
                         </div> 
                 </div>
@@ -330,7 +330,7 @@
                                         RBC is committed to helping clients thrive and communities prosper, supporting
                                          initiatives that make an impact on society.<br><br>
                                 </p>
-                                <a href="#" class="btn btn-primary">Go to Website</a>
+                                <a target="_blank" href="https://www.rbc.com/canada.html" class="btn btn-outline-dark btn-md">Go to Website</a>
                             </div>
                         </div> 
                 </div>
@@ -344,17 +344,25 @@
     <div id="Support" class="offset">
         <div class="jumbotron text-center">
             <h3>Support HackYourFuture Canada</h3>
-            <p>HackYourFuture Canada is a not-for-profit group. Become a partner or send a donation to help support the program</p>
+            <div class="heading-underline"></div><br><br>
+            <h5>HackYourFuture Canada is a not-for-profit group. Become a partner or send a donation to help support the program</h5>
             <br><br>
             <!-- Become a partner Section-->
             <div id="Partner">
-            <h3> Become a Partner</h3>
+            <h3> Hire one of our Graduates </h3>
+            <p>
+                Our students are taught to write clean code and learn to solve problems efficiently. 
+                Tell us about your hiring needs, and one of our graduates may suit the role. 
+            </p>
             <a style="margin:25px;" class="btn btn-outline-dark btn-lg" href="#Student"> Apply </a>
  
             </div> <!-- end of become a partner-->
 
             <div id="Support">
-                <h3> Become a Partner</h3>
+                <h3> Send a Donation </h3>
+                <p>               
+                    Become a partner of HackYourFuture Canada by visiting the link below
+                </p>
                 <a style="margin:25px;" class="btn btn-outline-dark btn-lg" href="#Student"> Apply </a>
             </div>
         </div>
