--- a/index.html
+++ b/index.html
@@ -216,64 +216,64 @@
                 <div class="row text-center">
                     <div class="col-md-3">
                         <div class="feature">
-                            <i class="far fa-flushed fa-4x" data-fa-transform="up-5"></i>
-                            <h5><em>Harry Potter</em></h5>
+                            <img class="TeamPhoto rounded-circle" src="img/Team/Rabia Tanvir.jpeg">
+                            <h5><em>Tabia Tanvir</em></h5>
                             <small>Javascript Instructor</small>
                             <small><a href="#">Linkedin.com/Harry</a></small>
                         </div>
                     </div>
                 <div class="col-md-3">
                         <div class="feature">
-                            <i class="far fa-flushed fa-4x" data-fa-transform="up-5"></i>
-                            <h5><em>Harry Potter</em></h5>
+                            <img class="TeamPhoto rounded-circle" src="img/Team/Abdulazeez Abdulrazzaq.jpg">
+                            <h5><em>Abdulazeez Abdulrazzaq</em></h5>
                             <small>Javascript Instructor</small>
                             <small><a href="#">Linkedin.com/Harry</a></small>
                         </div>
                     </div>
                 <div class="col-md-3">
                         <div class="feature">
-                            <i class="far fa-flushed fa-4x" data-fa-transform="up-5"></i>
-                            <h5><em>Harry Potter</em></h5>
+                            <img class="TeamPhoto rounded-circle" src="img/Team/Aneesh Tarun.png">
+                            <h5><em>Aneesh Tarun</em></h5>
                             <small>Javascript Instructor</small>
                             <small><a href="#">Linkedin.com/Harry</a></small>
                         </div>
                 </div>
                 <div class="col-md-3">
                         <div class="feature">
-                            <i class="far fa-flushed fa-4x" data-fa-transform="up-5"></i>
-                            <h5><em>Harry Potter</em></h5>
+                            <img class="TeamPhoto rounded-circle" src="img/Team/Ahmad Khaja.jpeg">
+                            <h5><em>Ahmad Khaja</em></h5>
                             <small>Javascript Instructor</small>
                             <small><a href="#">Linkedin.com/Harry</a></small>
                         </div>
                 </div>
                 <div class="col-md-3">
                         <div class="feature">
-                            <i class="far fa-flushed fa-4x" data-fa-transform="up-5"></i>
-                            <h5><em>Harry Potter</em></h5>
+                            <img class="TeamPhoto rounded-circle" src="img/Team/Elizabeth Chan.jpg">
+                            <h5><em>Elizabeth Chan</em></h5>
                             <small>Javascript Instructor</small>
                             <small><a href="#">Linkedin.com/Harry</a></small>
                         </div>
                 </div>
                 <div class="col-md-3">
                         <div class="feature">
-                            <i class="far fa-flushed fa-4x" data-fa-transform="up-5"></i>
-                            <h5><em>Harry Potter</em></h5>
+                            <img class="TeamPhoto rounded-circle" src="img/Team/Jialun Chen.png">
+                            <h5><em>Jialun Chen</em></h5>
                             <small>Javascript Instructor</small>
                             <small><a href="#">Linkedin.com/Harry</a></small>
                         </div>
                 </div>
                 <div class="col-md-3">
                         <div class="feature">
-                            <i class="far fa-flushed fa-4x" data-fa-transform="up-5"></i>
-                            <h5><em>Harry Potter</em></h5>
+                            <img class="TeamPhoto rounded-circle" src="img/Team//Mohannad Bakkar.jpg">
+                            <h5><em>Mohammad Bakkar</em></h5>
                             <small>Javascript Instructor</small>
                             <small><a href="#">Linkedin.com/Harry</a></small>
                         </div>
                 </div>
                 <div class="col-md-3">
                         <div class="feature">
-                            <i class="far fa-flushed fa-4x" data-fa-transform="up-5"></i>
-                            <h5><em>Harry Potter</em></h5>
+                            <img class="TeamPhoto rounded-circle" src="img/Team/Rajaie AlKorani.png">
+                            <h5><em>Rajaie Alkorani</em></h5>
                             <small>Javascript Instructor</small>
                             <small><a href="#">Linkedin.com/Harry</a></small>
                         </div>
@@ -354,7 +354,7 @@
                 Our students are taught to write clean code and learn to solve problems efficiently. 
                 Tell us about your hiring needs, and one of our graduates may suit the role. 
             </p>
-            <a style="margin:25px;" class="btn btn-outline-dark btn-lg" href="#Student"> Apply </a>
+            <a style="margin:25px;" class="btn btn-outline-dark btn-lg" href="#Student"> Support us </a>
  
             </div> <!-- end of become a partner-->
 
@@ -363,7 +363,7 @@
                 <p>               
                     Become a partner of HackYourFuture Canada by visiting the link below
                 </p>
-                <a style="margin:25px;" class="btn btn-outline-dark btn-lg" href="#Student"> Apply </a>
+                <a style="margin:25px;" class="btn btn-outline-dark btn-lg" href="#Student"> Donate </a>
             </div>
         </div>
 
@@ -373,15 +373,27 @@
 
     <!-- Contact section-->
     <div id="Contact" class="offset">
-        <div class="narrow text-center">
+        <div class="narrow justify-content-center text-center"><br>
+            <h3>Get in Touch!</h3>
+            <div class="heading-underline"></div><br><br>
+            <form action="">
+                <input class="form-control" type="text" name="Name" placeholder="Name"><br>
+                <input class="form-control" type="text" name="Email" placeholder="E-mail Address"><br><br>
+                <label>Message</label>
+                <input style="height: 200px" class="form-control" type="text" name="Email" placeholder="">
+                <a style="margin:25px;" class="btn btn-outline-dark btn-lg" href="#Student"> Submit </a>
+
+            </form>
         </div>
 
     </div>
     <!-- end of Contact-->
 
+    <hr><br>
+
     <!-- Footer section-->
     <footer>
-        <div id="Contact" class="row justify-content-center">
+        <div id="Contact" class="row justify-content-center" >
             <div class="col-md-5 text-center">
                 <img src="img/HYFCanada.png">
                 <p>HackYourFuture Canada<br><br>
