small change to form label

--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
             <h3>Get in Touch!</h3>
             <div class="heading-underline"></div><br><br>
             <form action="">
+                <label>Contact Information</label>
                 <input class="form-control" type="text" name="Name" placeholder="Name"><br>
                 <input class="form-control" type="text" name="Email" placeholder="E-mail Address"><br><br>
                 <label>Message</label>
